--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@ under the License.
 <!--			<scope>provided</scope>-->
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-connector-kafka_2.11</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+
 		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
 
 		<!-- Example:
