--- a/pom.xml
+++ b/pom.xml
@@ -64,27 +64,31 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
 			<version>${flink.version}</version>
-			<scope>provided</scope>
+			<scope>runtime</scope>
+<!--			<scope>provided</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients_${scala.binary.version}</artifactId>
 			<version>${flink.version}</version>
-			<scope>provided</scope>
+			<scope>runtime</scope>
+<!--			<scope>provided</scope>-->
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-kafka_2.11</artifactId>
 			<version>${flink.version}</version>
-			<scope>provided</scope>
+			<scope>runtime</scope>
+<!--			<scope>provided</scope>-->
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-avro</artifactId>
 			<version>${flink.version}</version>
-			<scope>provided</scope>
+			<scope>runtime</scope>
+<!--			<scope>provided</scope>-->
 		</dependency>
 
 		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
@@ -181,7 +185,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>kafkaprometheustest.NewUserAdditionJob</mainClass>
+									<mainClass>gappversion.GappVersionJob</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
