--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>kafkaprometheustest.NewUserAdditionJob</mainClass>
+									<mainClass>gappversion.GappVersionJob</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
